@@ -14,6 +14,11 @@ toc::[]
 
 == {compare-url}/v0.2.0\...HEAD[Unreleased]
 
+=== Added
+
+* Add aliases to `--error-correction-level` and `--symbol-version` of `encode`
+  command
+
 === Changed
 
 * Change to use fork of `qrcode` crate.
